Infra/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maori-story-ingress
  namespace: story-fill
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
    
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: maori-story-backend-svc
            port:
              number: 80

      - path: /admin/
        pathType: Prefix
        backend:
          service:
            name: maori-story-backend-svc
            port:
              number: 80
      
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: maori-story-backend-svc
            port:
              number: 80

      - path: /media/
        pathType: Prefix
        backend:
          service:
            name: maori-story-backend-svc
            port:
              number: 80
              
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maori-story-frontend-svc
            port:
              number: 80
