Infra/backend-netpol.yaml
# backend-netpol.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-internal-traffic
  namespace: story-fill
spec:

  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

  ingress:

    - from:
      - podSelector: {}

  egress:

    - to:
      - podSelector: {}
